<resources>
    <string name="app_name">Marvel</string>

    <string name="loading">Loading…</string>
    <string name="empty_comics">comics not found</string>
    <string name="empty_events">events not found</string>

    <string name="title_activity_main">Marvel Universe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="marvel">MARVEL</string>
    <string name="marvel_copyright">Data provided by Marvel. © 2014 Marvel</string>
    <string name="comics">Comics</string>
    <string name="characters">Characters</string>
    <string name="events">Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_comics">ComicsActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="action_settings">Settings</string>
    <string name="description">Description:</string>
    <string name="empty_characters">There are now any characters yet</string>
    <string name="price">Price:</string>
    <string name="price_format">%s$</string>
    <string name="pages">Pages:</string>
    <string name="some_error">Error</string>
    <string name="title_activity_caracter">Character info</string>
    <string name="descr_placeholder"></string>
</resources>
