<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.gdgkazan.marvel.screen.comics.ComicsActivity"
    tools:showIn="@layout/activity_comics">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text.18"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text.14"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text.18"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text.14"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/text.18"
            android:text="@string/pages"/>

        <TextView
            android:id="@+id/pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text.14"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"/>

        <ProgressBar
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:id="@+id/progress_loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/characters_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text.18"
                android:text="@string/characters"/>

            <ru.gdgkazan.marvel.widget.EmptyRecyclerView
                android:id="@+id/characters_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:overScrollMode="never"/>

            <TextView
                android:id="@+id/characters_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/empty_characters"
                android:textColor="@color/error_text_color"
                android:textSize="@dimen/text.15"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/events_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text.18"
                android:text="@string/events"/>

            <ru.gdgkazan.marvel.widget.EmptyRecyclerView
                android:id="@+id/events_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:overScrollMode="never"/>

            <TextView
                android:id="@+id/events_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/empty_events"
                android:textColor="@color/error_text_color"
                android:textSize="@dimen/text.15"/>
        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
